# AssistantGPT

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build.sh  install.sh  install_dev.sh  main.py  package-lock.json  pyproject.toml
.github/.workflows/: backend_ci.yml  frontend_ci.yml
.github/workflows/: backend_ci.yml  backend_deployment.yml  ci.yaml  frontend_ci.yml
app/: conftest.py  main.py  settings.py
app/chatGPT/: core.py
app/db/: utils.py
app/services/aws/: dynamodb.py
app/web/: application.py  lifetime.py
assistant_gpt/: manage.py  pyproject.toml
assistant_gpt/api/: urls.py  views.py
assistant_gpt/assistant_gpt/: asgi.py  settings.py  urls.py  wsgi.py
backend/: .flake8  .pre-commit-config.yaml  .pre-commit-config.yml  pyproject.toml  requirements.in  requirements.txt  requirements_dev.txt
backend/.github/workflows/: ci.yml
backend/app/: app.py  conftest.py  settings.py
backend/app/core/: settings.py
backend/app/db/: base.py  config.py
backend/app/db/models/: dummy_model.py
backend/app/schemas/: chat.py
backend/app/services/: __init__.py
backend/app/web/: application.py
backend/app/web/api/: router.py
backend/deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
backend/deploy/kube/: app.yml  db.yml  rabbit.yml
backend/tests/: sanity_test.py
frontend/: .eslintrc.json  package-lock.json  package.json
frontend/src/: App.css  App.js  App.jsx  FloatingCircle.css
frontend/src/app/: page.tsx
frontend/src/app/api/: chat.ts
scripts/: install.sh  install_dev.sh
(+2 files in other folders)
