[tool.poetry]
name = "assistant-gpt"
version = "0.1.0"
description = ""
authors = ["astelmach01 <astelmach20@gmail.com>"]
readme = "README.md"
packages = [{include = "assistant_gpt"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.4"
djangorestframework = "^3.14.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
